docs/versioned_docs/version-0.7.0/general/06-Tutorials/index.mdx
# Tutorials
import {TutorialCardsRows} from '@site/src/components/TutorialCards';

export const askuiRow = () => [
  {
    name: 'Select Custom Elements',
    image: require('@site/static/img/tutorial-cards/custom-element.png'),
    url: 'Tutorials/custom-element',
    cta: 'Go to Tutorial',
  },
  {
    name: 'Multiple Devices',
    image: require('@site/static/img/tutorial-cards/multi-device.png'),
    url: 'Tutorials/multi-device',
    cta: 'Go to Tutorial',
  },
];

export const androidRow = () => [
  {
    name: 'Setup Android',
    image: require('@site/static/img/tutorial-cards/setup-android.png'),
    url: 'Tutorials/setup-android',
    cta: 'Go to Tutorial',
  },
  {
    name: 'Web Search on Android',
    image: require('@site/static/img/tutorial-cards/web-search-android.png'),
    url: 'Tutorials/android-search-in-browser',
    cta: 'Go to Tutorial',
  },
];

export const webRow = () => [
  {
    name: 'Google Cat Search',
    image: require('@site/static/img/tutorial-cards/cat-search.png'),
    url: 'Tutorials/google-cat-search',
    cta: 'Go to Tutorial',
  },
  {
    name: 'Online Shop',
    image: require('@site/static/img/tutorial-cards/online-shop.png'),
    url: 'Tutorials/shop-demo',
    cta: 'Go to Tutorial',
  },
];

export const desktopRow = () => [
  {
    name: 'Spotify Like',
    image: require('@site/static/img/tutorial-cards/spotify-like.png'),
    url: 'Tutorials/spotify-tutorial',
    cta: 'Go to Tutorial',
  },
  {
    name: 'Zip Images and Upload',
    image: require('@site/static/img/tutorial-cards/zip-images-and-upload.png'),
    url: 'Tutorials/zip-images-upload-googledrive-windows',
    cta: 'Go to Tutorial',
  },
];

export const integrationsRow = () => [];

## 🔧 askui
<TutorialCardsRows row={askuiRow}/>

## 🤖 Android
<TutorialCardsRows row={androidRow}/>

## 🕸️ Browser
<TutorialCardsRows row={webRow}/>

## 💻 Desktop
<TutorialCardsRows row={desktopRow}/>
